@startuml
skinparam backgroundColor #FFFFFF
skinparam shadowing false
skinparam roundcorner 12
skinparam defaultFontName Arial
skinparam ArrowColor #344054
skinparam rectangle {
  BorderColor #344054
  FontColor #101828
}
skinparam package {
  BorderColor #667085
  FontColor #101828
  BackgroundColor #F9FAFB
}
title Class structure - Create and edit albums
skinparam class {
 BorderColor #344054
 FontColor #101828
 BackgroundColor #F9FAFB
}
class Album {
 +Guid Id
 +Guid ClientId
 +string Name
 +long Version
 +ReplaceSelection(photoIds: Guid[]): void
}
class AlbumPhoto {
 +Guid PhotoId
 +int Position
}
Album "1" *-- "0..*" AlbumPhoto : Owned reference; original photo lifetime remains independent
interface IStudioStore {
 +Run<T>(lockKey, action): Task<T>
}
interface IStudioTransaction {
 +Get<T>(id): Task<T?>
 +List<T>(): Task<T[]>
 +Save<T>(value, expectedVersion): Task
}
IStudioStore ..> IStudioTransaction : scopes one committed unit of work
IStudioStore o-- Album : persists or supplies inputs
@enduml
